# map_istanbul

./: .gitignore  README.md  pyproject.toml  test_get_location_data.py
apps/auth/: admin.py  apps.py  models.py  urls.py
apps/auth/api/: routers.py  serializers.py  viewsets.py
apps/auth/migrations/: 0001_initial.py  0002_alter_customuser_email.py
apps/frontend/: urls.py  utils.py  views.py
apps/map/: admin.py  filters.py  models.py  urls.py
apps/map/api/: routers.py  serializers.py  viewsets.py
apps/map/migrations/: 0001_initial.py  0002_initial.py  0003_rename_park_name_county_name.py  0004_alter_county_options_alter_locations_options.py
apps/swagger/: urls.py
common/enums/: group.py
common/mixins/: __init__.py  audit.py  gis_model.py  manager.py
common/pagination/: __init__.py  page.py
common/permissions/: group.py
common/wrappers/: login.py
core/: urls.py
core/settings/: base.py
static/css/: login.css  register.css
static/js/: data.js  events.js  login.js  main.js  register.js
templates/: base.html  login.html  map.html  permission-control.html  register.html
