[tool.poetry]
name = "map-istanbul"
version = "0.1.0"
description = ""
authors = ["kemalbastak <bastakkemal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework-gis = "^1.1"
django-rest-knox = "^5.0.1"
pandas = "^2.2.2"
django-currentuser = "^0.8.0"
django-soft-delete = "^1.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
